started projects page in my website

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <li>
                 <a href="#contact">Contact</a>
             </li>
-            <li>
+            <li class="icon">
                 <a href="#">
                 <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
-            <li>
+            <li class="icon">
                 <a href="#">
                 <i class="fa-brands fa-twitter"></i>
                 </a>
@@ -111,7 +111,7 @@
           </h3>
           <div class="service-list-container">
             <div class="service-item">
-                <img src="./images/cup.jpg" alt="coffee" />
+                <img src="./images/cup.jpg" alt="coffee" loading="lazy"/>
                 <h4>
                     off The Ground The Ground 
                 </h4>
@@ -126,7 +126,7 @@
                 <button>Details</button>
             </div>
             <div class="service-item">
-                <img src="./images/book.jpg" alt="book"/>
+                <img src="./images/book.jpg" alt="book"loading="lazy"/>
                 <h4>
                    Accelerated Growth
                 </h4>
@@ -141,7 +141,7 @@
                 <button>Details</button>
             </div>
             <div class="service-item">
-                <img src="./images/shoes.jpg" alt="shoes" />
+                <img src="./images/shoes.jpg" alt="shoes" loading="lazy"/>
                 <h4>
                     Market Domination
                 </h4>
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="propositions propositions-1">
-            <img src="./images/forest.jpg" class="mountain"/>
+            <img src="./images/forest.jpg" class="mountain"loading="lazy"/>
             <div class="content">
                 <h3>Accelerate Business Growth To Improve Revenue Numbers</h3>
                 <br />
@@ -174,7 +174,7 @@
                     Aria provides the most innovative and custuomazied business services in the industry. Our services section shows how flexible we are for all types of budgets.
                 </p>
              </div>
-             <img src="./images/lake2.jpg" alt="forest"/>
+             <img src="./images/lake2.jpg" alt="forest"loading="lazy"/>
           </div>
           <div class="testimonials">
             <h3>Read Our Customer testimonials</h3>
@@ -184,7 +184,7 @@
             </p>
             <div class="testimonial-list-container">
                 <div class="testimonial-item">
-                    <img src="./images/2.jpg" alt="2"/>
+                    <img src="./images/2.jpg" alt="2"loading="lazy"/>
                     <p class="italic">
                         At the beginning I thought the prices are a little high for what they offer but they over deliver each and every time.
                     </p>
@@ -193,7 +193,7 @@
                     </h4>
                 </div>
                 <div class="testimonial-item">
-                    <img src="images/1.jpg" alt="1"/>
+                    <img src="images/1.jpg" alt="1"loading="lazy"/>
                     <p class="italic">
                         I recommend Aria to every business owner or growth leader that wants to take his company to the next level.
                     </p>
@@ -202,7 +202,7 @@
                     </h4>
                 </div>
                 <div class="testimonial-item">
-                    <img src="./images/4.jpg" alt="4"/>
+                    <img src="./images/4.jpg" alt="4"loading="lazy"/>
                     <p class="italic">
                         My goals for using Aria's services seemed high when I first set them but they've met them with no problems.
                     </p>
@@ -211,7 +211,7 @@
                     </h4>
                 </div>
                 <div class="testimonial-item">
-                    <img src="./images/3.jpg" alt="3"/>
+                    <img src="./images/3.jpg" alt="3"loading="lazy"/>
                     <p class="italic">
                         The guys from Aria helped with getting my business off the ground and turning into a profitable company.
                     </p>
@@ -220,7 +220,7 @@
                     </h4>
                 </div>
                 <div class="testimonial-item">
-                    <img src="images/5.jpg" alt="5"/>
+                    <img src="images/5.jpg" alt="5"loading="lazy"/>
                     <p class="italic">
                         I purchased the growth Accelerator service pack a few years ago and I renewed the contract each year.
                     </p>
@@ -229,7 +229,7 @@
                     </h4>
                 </div>
                 <div class="testimonial-item">
-                    <img src="./images/6.jpg" alt="6"/>
+                    <img src="./images/6.jpg" alt="6" loading="lazy"/>
                     <p class="italic">
                         Aria's CEO personally attends client meetings and gives feedback on business grwoth strategies.
                     </p>
@@ -242,7 +242,7 @@
        <section class="call_me" id="call_me">
          <div class="content">
             <span class="section-title">CALL ME</span>
-            <h3>
+            <h2>
                 You are just a few steps away from a personalized offer.Just fill in the form and send it to us and we'll get right back with a call to help you decide what service Package works.
                 <p>
                 <ul>
@@ -251,7 +251,7 @@
                     <li>Don't hesitate to email us for any questions or inquiries</li>
                 </ul>  
                 </p> 
-            </h3>
+            </h2>
          </div>
          <div class="form">
            <form>
@@ -282,25 +282,17 @@
          <div class="category-list-conatiner">
             <ul>
                 <li>
-                    <button>show All</button>
+                    <button class="active">show All</button>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <button>Design</button>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <button>Development</button>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <button>Marketing</button>
                 </li>
-            </ul>
-            <ul>
                 <li>
                     <button>SEO</button>
                 </li>
@@ -308,22 +300,25 @@
          </div>
          <div class="Project-list-container">
             <div class="projects-lists-item">
-                <img />
+                <img src="images/travelbag.jpg" alt="bag" loading="lazy"/>
             </div>
             <div class="projects-lists-item">
-                <img />
+                <img src="images/woodboat.jpg" alt="boat" loading="lazy" />
             </div>
             <div class="projects-lists-item">
-                <img />
+                <img src="images/road.jpg" alt="road"loading="lazy"/>
             </div>
             <div class="projects-lists-item">
-                <img />
+                <img src="images/cam.jpg" alt="camara"loading="lazy"/>
             </div>
             <div class="projects-lists-item">
-                <img />
+                <img src="images/stone.jpg" alt="stone"loading="lazy"/>
             </div>
             <div class="projects-lists-item">
-                <img />
+                <img src="images/compess.jpg" alt="compess"loading="lazy" />
+            </div>
+            <div class="projects-lists-item">
+                <img src="images/boat.jpg" alt="boat" loading="lazy"/>
             </div>
          </div>
          <div class="team">
