edited project page using css

--- a/index.html
+++ b/index.html
@@ -299,26 +299,29 @@
             </ul>
          </div>
          <div class="Project-list-container">
-            <div class="projects-lists-item">
-                <img src="images/travelbag.jpg" alt="bag" loading="lazy"/>
+            <div class="projects-item p-1">
+                <!-- <img src="images/travelbag.jpg" alt="bag" loading="lazy"/> -->
             </div>
-            <div class="projects-lists-item">
-                <img src="images/woodboat.jpg" alt="boat" loading="lazy" />
+            <div class="projects-item p-2">
+                <!-- <img src="images/woodboat.jpg" alt="boat" loading="lazy" /> -->
             </div>
-            <div class="projects-lists-item">
-                <img src="images/road.jpg" alt="road"loading="lazy"/>
+            <div class="projects-item p-3">
+                <!-- <img src="images/road.jpg" alt="road"loading="lazy"/> -->
             </div>
-            <div class="projects-lists-item">
-                <img src="images/cam.jpg" alt="camara"loading="lazy"/>
+            <div class="projects-item p-4">
+                <!-- <img src="images/cam.jpg" alt="camara"loading="lazy"/> -->
             </div>
-            <div class="projects-lists-item">
-                <img src="images/stone.jpg" alt="stone"loading="lazy"/>
+            <div class="projects-item p-5">
+                <!-- <img src="images/stone.jpg" alt="stone"loading="lazy"/> -->
             </div>
-            <div class="projects-lists-item">
-                <img src="images/compess.jpg" alt="compess"loading="lazy" />
+            <div class="projects-item p-6">
+                <!-- <img src="images/compess.jpg" alt="compess"loading="lazy" /> -->
             </div>
-            <div class="projects-lists-item">
-                <img src="images/boat.jpg" alt="boat" loading="lazy"/>
+            <div class="projects-item p-7">
+                <!-- <img src="images/boat.jpg" alt="boat" loading="lazy"/> -->
+            </div>
+            <div class="projects-item p-8">
+                <!-- <img src="images/view.jpg" alt="view" loading="lazy"/> -->
             </div>
          </div>
          <div class="team">
