--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
        <section class="call_me" id="call_me">
          <div class="content">
             <span class="section-title">CALL ME</span>
-            <h2>
+            <h3>
                 You are just a few steps away from a personalized offer.Just fill in the form and send it to us and we'll get right back with a call to help you decide what service Package works.
                 <p>
                 <ul>
@@ -251,7 +251,7 @@
                     <li>Don't hesitate to email us for any questions or inquiries</li>
                 </ul>  
                 </p> 
-            </h2>
+            </h3>
          </div>
          <div class="form">
            <form>
@@ -324,70 +324,79 @@
                 <!-- <img src="images/view.jpg" alt="view" loading="lazy"/> -->
             </div>
          </div>
-         <div class="team">
-            <h4>Our Team Of Consultants</h4>
+         <section class="team">
+            <h3>Our Team Of Consultants</h3>
             <p>
-                We're only as strong and as knowledgeable as our team .so here the men and women which help Customers meet goals and grow companies
+                We're only as strong and as knowledgeable as our team .<br/>
+                so here the men and women which help Customers meet goals and grow companies
             </p>
             <div class="team-member-list-container">
-                <div class="team-member-list-item">
-                    <img />
+                <div class="team-member-item">
+                    <div class="profile-picture">
+                    <img src="./images/john.jpg" alt="member-1"/>
+                    </div>
                     <p>
                         John Whitelong
                     </p>
-                    <p>
+                    <h5>
                         General Manager
-                    </p>
+                    </h5>
                     <div class="social-links">
-                        <span>F</span>
-                        <span>T</span>
+                        <span><i class="fa-brands fa-facebook"></i></span>
+                        <span><i class="fa-brands fa-twitter"></i></span>
                     </div>
                 </div>
-                <div class="team-member-list-item">
-                    <img />
+                <div class="team-member-item">
+                    <div class="profile-picture">
+                    <img src="./images/smith.jpg" alt="member-2"/>
+                    </div>
                     <p>
                         Veronique Smith
                     </p>
-                    <p>
+                    <h5>
                         Business Developer
-                    </p>
+                    </h5>
                     <div class="social-links">
-                        <span>F</span>
-                        <span>T</span>
+                        <span><i class="fa-brands fa-facebook"></i></span>
+                        <span><i class="fa-brands fa-twitter"></i></span>
                     </div>
                 </div>
-                <div class="team-member-list-item">
-                    <img />
+                <div class="team-member-item">
+                    <div class="profile-picture">
+                    <img src="./images/chris.jpg" alt="member-3"/>
+                    </div>
                     <p>
                        Chris Zimerman
                     </p>
-                    <p>
+                    <h5>
                         Online Marketer
-                    </p>
+                    </h5>
                     <div class="social-links">
-                        <span>F</span>
-                        <span>T</span>
+                        <span><i class="fa-brands fa-facebook"></i></span>
+                        <span><i class="fa-brands fa-twitter"></i></span>
                     </div>
                 </div>
-                <div class="team-member-list-item">
-                    <img />
+                <div class="team-member-item">
+                    <div class="profile-picture">
+                    <img src="./images/mary.jpg" alt="member-4" />
+                    </div>
                     <p>
                         Mary Villalonga
                     </p>
-                    <p>
+                    <h5>
                         Community Manager
-                    </p>
+                    </h5>
                     <div class="social-links">
-                        <span>F</span>
-                        <span>T</span>
+                        <span><i class="fa-brands fa-facebook"></i></span>
+                        <span><i class="fa-brands fa-twitter"></i></span>
                     </div>
                 </div>
             </div>
-         </div> 
+       </section> 
        </section>
        <section class="about" id="about">
-         <img />
-         <div class=" content">
+         <img src="./images/mountain.jpg" alt="in between mountains"/>
+         <div class="content">
             <span class="section-title">About</span>
             <h3>We're passionate about delivering growth services</h3>
             <p>
@@ -399,15 +408,15 @@
             </ul>
             <div class="stats-list-container">
                 <div class="stat-item">
-                    <p>231</p>
+                    <p class="number">231</p>
                     <p>Happy Users</p>
                 </div>
                 <div class="stat-item">
-                    <p>121</p>
+                    <p class="number">121</p>
                     <p>Issues Solved</p>
                 </div>
                 <div class="stat-item">
-                    <p>159</p>
+                    <p class="number">159</p>
                     <p>Good Reviews</p>
                 </div>
             </div>
@@ -417,46 +426,46 @@
          <div class="content">
             <span class="section-title">CONTACT</span>
             <h3>Get in touch using the form</h3>
+            <br/>
             <p>
                 You can stop by office for a cup of coffee and just use the contact form below for any questions and inquiries
             </p>
-            <div class="contact -info-container">
+            <br/>
+            <div class="contact-info-container">
                 <div class="contact-info-item">
-                    <span>I</span>
-                    <p>22nd Innovative street,  San Francisco,CA 94043,US</p>
+                    <p><i class="fa-solid fa-location-dot"></i>  22nd Innovative street,  San Francisco,CA 94043,US</p>
                 </div>
                 <div class="contact-info-item">
-                    <span>I</span>
-                    <p>+81 720 22 126</p>
+                    <p><i class="fa-solid fa-phone-flip"></i>  +81 720 22 126</p>
                 </div>
                 <div class="contact-info-item">
-                    <span>I</span>
-                    <p>+81 720 22 128</p>
+                    <p><i class="fa-solid fa-phone-flip"></i>  +81 720 22 128</p>
                 </div>
                 <div class="contact-info-item">
-                    <span>I</span>
-                    <p>office@domain.com</p>
+                    <p><i class="fa-solid fa-envelope"></i>  office@domain.com</p>
                 </div>
             </div>
-            <h3>Follow Aria on Social Media</h3>
+            <br/>
+            <br/>
+            <h4>Follow Aria on Social Media</h4>
             <div class="social-links-list-container">
               <div class="social-links-item">
-                <span>I</span>
+                <span><i class="fa-brands fa-facebook"></i></span>
               </div>
               <div class="social-links-item">
-                <span>I</span>
+                <span><i class="fa-brands fa-twitter"></i></span>
               </div>
               <div class="social-links-item">
-                <span>I</span>
+                <span><i class="fa-brands fa-pinterest"></i></span>
               </div>
               <div class="social-links-item">
-                <span>I</span>
+                <span><i class="fa-brands fa-instagram"></i></span>
               </div>
               <div class="social-links-item">
-                <span>I</span>
+                <span><i class="fa-brands fa-linkedin"></i></span>
               </div>
               <div class="social-links-item">
-                <span>I</span>
+                <span><i class="fa-brands fa-behance"></i></span>
               </div>
             </div>
          </div>
@@ -465,15 +474,23 @@
             <input type="text" placeholder="Name" name="name" />
             <input type="text" placeholder="Email" name="name" />
             <textarea name="message" placeholder="Your Message" ></textarea>
-            <input type="checkbox" name="terms" id="terms" value="1" />
-            <label for="terms">agree with Aria's stated privacy policy and terms and conditions</label>
+            <div class="terms">
+            <input type="checkbox" name="contact_terms" id="contact_terms" value="1" />
+            <label for="terms">
+                I agree with Aria's stated 
+                <span class="underline">Privacy policy </span> 
+                and
+                <span class="underline">terms and conditions</span>
+            </label>
+            </div>
             <button type="submit">Submit Message</button>
            </form>
          </div>
        </section>
+
        <footer>
         <def class="footer-list-container">
-         <div class="footer-item">
+         <div class="footer-item wide">
             <h5>Few words about Aria</h5>
             <p>
                 We're passionate about  delivering the best business growth service for companies just started out as startups or industry players that have establised their market position a long time  ago.
