arranged services section and footer section

--- a/index.html
+++ b/index.html
@@ -160,14 +160,27 @@
             <img src="./images/forest.jpg" class="mountain"loading="lazy"/>
             <div class="content">
                 <h3>Accelerate Business Growth To Improve Revenue Numbers</h3>
-                <br />
+                <h4 class="active"><span class="order">1</span> How Can Aria Help Your Business</h4>
+                <!-- <br /> -->
                 <p>
                   At Aria solutions , We've taken the consultancy concept one step further by offering a full service management organization with expertise.  
                 </p>
+                <br />
+                <h4 ><span class="order">2</span>Great Strategic Business Planning</h4>
+                <br />
+                <h4><span class="order">3</span>Online Services For compaigns</h4>
             </div>
           </div>
           <div class="propositions propositions-2">
              <div class="content">
+                <div class="category-list-conatiner">
+                    <div class="category-item active"></div>
+                       <h3>Business</h3>
+                    <div class="category-item"></div>
+                        <h3>Expertise</h3>
+                    <div class="category-item"></div>
+                        <h3>Quality</h3>
+                </div>
                 <h3>Business services for companies</h3>
                 <br />
                 <p>
@@ -300,28 +313,20 @@
          </div>
          <div class="Project-list-container">
             <div class="projects-item p-1">
-                <!-- <img src="images/travelbag.jpg" alt="bag" loading="lazy"/> -->
             </div>
             <div class="projects-item p-2">
-                <!-- <img src="images/woodboat.jpg" alt="boat" loading="lazy" /> -->
             </div>
             <div class="projects-item p-3">
-                <!-- <img src="images/road.jpg" alt="road"loading="lazy"/> -->
             </div>
             <div class="projects-item p-4">
-                <!-- <img src="images/cam.jpg" alt="camara"loading="lazy"/> -->
             </div>
             <div class="projects-item p-5">
-                <!-- <img src="images/stone.jpg" alt="stone"loading="lazy"/> -->
             </div>
             <div class="projects-item p-6">
-                <!-- <img src="images/compess.jpg" alt="compess"loading="lazy" /> -->
             </div>
             <div class="projects-item p-7">
-                <!-- <img src="images/boat.jpg" alt="boat" loading="lazy"/> -->
             </div>
             <div class="projects-item p-8">
-                <!-- <img src="images/view.jpg" alt="view" loading="lazy"/> -->
             </div>
          </div>
          <section class="team">
@@ -492,29 +497,35 @@
         <def class="footer-list-container">
          <div class="footer-item wide">
             <h5>Few words about Aria</h5>
+            <br />
             <p>
                 We're passionate about  delivering the best business growth service for companies just started out as startups or industry players that have establised their market position a long time  ago.
             </p>
          </div>
          <div class="footer-item">
            <h5>Links</h5>
+           <br />
            <a href="#">Terms and Conditions</a>
            <a href="#">Privacy Policy</a>
          </div>
          <div class="footer-item">
             <h5>Tools</h5>
+            <br/>
             <a href="#">businessgrowth.com</a>
             <a href="#">influencers.com</a>
             <a href="#">optimizer.net</a>
           </div>
           <div class="footer-item">
             <h5>partners</h5>
+            <br />
             <a href="#">unicorns.com</a>
             <a href="#">staffmanger.com</a>
             <a href="#">association.gov</a>
           </div>
         </def>
-        <span>Copyright &copy; 2045 All rights reserved - By Invoatik</span> 
+        <div class="copyright">
+        <span>Copyright &copy; 2045 All rights reserved - By Ayush &amp; Team</span> 
+        </div>   
        </footer>
 
 
