adding more features on service sectoion

--- a/index.html
+++ b/index.html
@@ -175,17 +175,34 @@
              <div class="content">
                 <div class="category-list-conatiner">
                     <div class="category-item active"></div>
-                       <h3>Business</h3>
+                       <h3><i class="fas fa-th"></i> Business</h3>
                     <div class="category-item"></div>
-                        <h3>Expertise</h3>
+                        <h3><i class="fas fa-th"></i>Expertise</h3>
                     <div class="category-item"></div>
-                        <h3>Quality</h3>
+                        <h3><i class="fas fa-th"></i>Quality</h3>
                 </div>
+                <br />
                 <h3>Business services for companies</h3>
                 <br />
                 <p>
-                    Aria provides the most innovative and custuomazied business services in the industry. Our services section shows how flexible we are for all types of budgets.
+                    Aria provides the most innovative and custuomazied business services in the industry. Our
+                    <span class="green-text">services</span> 
+                    section shows how flexible we are for all types of budgets.
                 </p>
+                <div class="skill-list-container">
+                  <div class="skill-item">
+                    <h6>Business Development 100%</h6>
+                    <div class="progress-bar p-100"></div>
+                  </div>
+                  <div class="skill-item">
+                    <h6>Opportunity Spotting 76%</h6>
+                    <div class="progress-bar p-76"></div>
+                  </div>
+                  <div class="skill-item">
+                    <h6>Online Marketing 90%</h6>
+                    <div class="progress-bar p-90"></div>
+                  </div>
+              </div>
              </div>
              <img src="./images/lake2.jpg" alt="forest"loading="lazy"/>
           </div>
