Added responsive design concepts with media queries and transitions to enhance cross-device user experience.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </a>
             </li>
         </ul>
+        <span class="mobile-menu"><i class="fa-solid fa-bars"></i></span>
        </nav>
        <section class="home" id="home">
             <h1>Business Services</h1>
@@ -329,21 +330,45 @@
             </ul>
          </div>
          <div class="Project-list-container">
-            <div class="projects-item p-1">
+            <div class="Project-item-container">
+              <div class="project-item p-1">
+              </div>
+              <h3>Online Banking</h3>
             </div>
-            <div class="projects-item p-2">
+            <div class="Project-item-container">
+              <div class="project-item p-2">
+              </div>
+              <h3>Classic industry</h3>
             </div>
-            <div class="projects-item p-3">
+            <div class="Project-item-container">
+              <div class="project-item p-3">
+              </div>
+              <h3>Van Moose</h3>
             </div>
-            <div class="projects-item p-4">
+            <div class="Project-item-container">
+              <div class="project-item p-4">
+              </div>
+              <h3>Jay Moments</h3>
             </div>
-            <div class="projects-item p-5">
+            <div class="Project-item-container">
+              <div class="project-item p-5">
+              </div>
+              <h3>Spark Events</h3>
             </div>
-            <div class="projects-item p-6">
+            <div class="Project-item-container">
+              <div class="project-item p-6">
+              </div>
+              <h3>Casual Wear</h3>
             </div>
-            <div class="projects-item p-7">
+            <div class="Project-item-container">
+              <div class="project-item p-7">
+              </div>
+              <h3>Zazoo Apps</h3>
             </div>
-            <div class="projects-item p-8">
+            <div class="Project-item-container">
+              <div class="project-item p-8">
+              </div>
+              <h3>Boombap Audio</h3>
             </div>
          </div>
          <section class="team">
